--- a/style.css
+++ b/style.css
@@ -46,3 +46,13 @@
   width: 100%;
   height: 100%
 }
+
+p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  font-size: 5vh;
+  color: #fff;
+}
